# internal/worker/signature.server.go
@@ -2,7 +2,9 @@ package worker
 
 import (
 	"context"
+	"encoding/hex"
 	"fmt"
+	"github.com/carv-protocol/verifier/api/gasless"
 	common2 "github.com/carv-protocol/verifier/internal/common"
 	"github.com/carv-protocol/verifier/pkg/tools"
 	"github.com/ethereum/go-ethereum/common"
@@ -15,14 +17,14 @@ import (
 )
 
 // Update node commission rate by service
-func UpdateNodeCommissionRateByGaslessService(ctx context.Context, c *Chain, commissionRate uint32, expiredAt *big.Int, signer common.Address) {
+func UpdateNodeCommissionRateByGaslessService(ctx context.Context, c *Chain, commissionRate uint32, expiredAt *big.Int) (bool, error) {
 	_, found := c.cache.Get(common2.UPDATE_NODE_COMMISSION_RATE_BY_GASLESS_SERVICE)
 	if found {
 		c.logger.WithContext(ctx).Errorf("UpdateNodeCommissionRateByGaslessService is in progress")
-		return
+		return false, fmt.Errorf("UpdateNodeCommissionRateByGaslessService is in progress")
 	}
 	c.logger.WithContext(ctx).Infof("UpdateNodeCommissionRateByGaslessService start........")
-	c.cache.Set(common2.UPDATE_NODE_COMMISSION_RATE_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME)
+	c.cache.Set(common2.UPDATE_NODE_COMMISSION_RATE_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME*time.Second)
 
 	// Call Gasless serivice
 	typedData := apitypes.TypedData{
@@ -66,21 +68,35 @@ func UpdateNodeCommissionRateByGaslessService(ctx context.Context, c *Chain, com
 	v, r, s, err := tools.SignTypedDataAndSplit(typedData, c.verifierPrivKey)
 	if err != nil {
 		log.Errorf("SignTypedData error: %s", err.Error())
-		return
+		return false, err
 	}
-	// TODO Send signature
-	fmt.Println(v, r, s)
+	// Send signature
+	setRes, err := c.gaslessClient.ExplorerSendTxModifyCommissionRate(ctx, &gasless.ExplorerSendTxModifyCommissionRateRequest{
+		Signer:         c.verifierAddress.String(),
+		CommissionRate: commissionRate,
+		ExpiredAt:      expiredAt.Uint64(),
+		V:              uint32(v),
+		R:              hex.EncodeToString(r[:]),
+		S:              hex.EncodeToString(s[:]),
+	})
+	if err != nil {
+		return false, err
+	}
+	if setRes.Code != 0 {
+		return false, fmt.Errorf("UpdateNodeCommissionRateByGaslessService failed %s", setRes.Msg)
+	}
+	return true, nil
 }
 
 // Update node reward claimer by service
-func UpdateNodeRewardClaimerByGaslessService(ctx context.Context, c *Chain, rewardClaimer common.Address, expiredAt *big.Int) {
+func UpdateNodeRewardClaimerByGaslessService(ctx context.Context, c *Chain, rewardClaimer common.Address, expiredAt *big.Int) (bool, error) {
 	_, found := c.cache.Get(common2.UPDATE_NODE_REWARD_CLAIMER_BY_GASLESS_SERVICE)
 	if found {
 		c.logger.WithContext(ctx).Errorf("UpdateNodeRewardClaimerByGaslessService is in progress")
-		return
+		return false, fmt.Errorf("UpdateNodeRewardClaimerByGaslessService is in progress")
 	}
 	c.logger.WithContext(ctx).Infof("UpdateNodeRewardClaimerByGaslessService start........")
-	c.cache.Set(common2.UPDATE_NODE_REWARD_CLAIMER_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME)
+	c.cache.Set(common2.UPDATE_NODE_REWARD_CLAIMER_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME*time.Second)
 	// TODO Call Gasless serivice
 	typedData := apitypes.TypedData{
 		Types: apitypes.Types{
@@ -116,17 +132,32 @@ func UpdateNodeRewardClaimerByGaslessService(ctx context.Context, c *Chain, rewa
 			ChainId: (*math.HexOrDecimal256)(big.NewInt(c.cf.Chain.ChainId)),
 		},
 		Message: apitypes.TypedDataMessage{
-			"claimer":   rewardClaimer,
+			"claimer":   rewardClaimer.String(),
 			"expiredAt": expiredAt,
 		},
 	}
 
 	v, r, s, err := tools.SignTypedDataAndSplit(typedData, c.verifierPrivKey)
 	if err != nil {
-		return
+		return false, err
+	}
+	explorerSendTxSetRewardClaimerRequest := &gasless.ExplorerSendTxSetRewardClaimerRequest{
+		Signer:    c.verifierAddress.String(),
+		Claimer:   rewardClaimer.String(),
+		ExpiredAt: expiredAt.Uint64(),
+		V:         uint32(v),
+		R:         hex.EncodeToString(r[:]),
+		S:         hex.EncodeToString(s[:]),
 	}
 	// Send signature
-	fmt.Println(v, r, s)
+	setRes, err := c.gaslessClient.ExplorerSendTxSetRewardClaimer(ctx, explorerSendTxSetRewardClaimerRequest)
+	if err != nil {
+		return false, err
+	}
+	if setRes.Code != 0 {
+		return false, fmt.Errorf("UpdateNodeRewardClaimerByGaslessService failed %s", setRes.Msg)
+	}
+	return true, nil
 }
 
 // Node Exit by service
@@ -137,8 +168,8 @@ func NodeExitByGaslessService(ctx context.Context, c *Chain, expiredAt *big.Int)
 		return
 	}
 	c.logger.WithContext(ctx).Infof("NodeExitByGaslessService start........")
-	c.cache.Set(common2.NODE_EXIT_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME)
-	// TODO Call Gasless serivice
+	c.cache.Set(common2.NODE_EXIT_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME*time.Second)
+	// Call Gasless serivice
 	typedData := apitypes.TypedData{
 		Types: apitypes.Types{
 			"EIP712Domain": {
@@ -183,16 +214,16 @@ func NodeExitByGaslessService(ctx context.Context, c *Chain, expiredAt *big.Int)
 }
 
 // Node Enter by service
-func NodeEnterByGaslessService(ctx context.Context, c *Chain, replacedNode common.Address, expiredAt *big.Int) ([]byte, error) {
-	_, found := c.cache.Get(common2.UPDATE_NODE_COMMISSION_RATE_BY_GASLESS_SERVICE)
+func NodeEnterByGaslessService(ctx context.Context, c *Chain, replacedNode common.Address, expiredAt *big.Int) (bool, error) {
+	_, found := c.cache.Get(common2.NODE_ENTRY_BY_GASLESS_SERVICE)
 	if found {
 		c.logger.WithContext(ctx).Errorf("NodeEnterByGaslessService is in progress")
-		return nil, fmt.Errorf("NodeEnterByGaslessService is in progress")
+		return false, fmt.Errorf("NodeEnterByGaslessService is in progress")
 	}
 	c.logger.WithContext(ctx).Infof("NodeEnterByGaslessService start........")
-	c.cache.Set(common2.UPDATE_NODE_COMMISSION_RATE_BY_GASLESS_SERVICE, true, 10*time.Second)
+	c.cache.Set(common2.NODE_ENTRY_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME*time.Second)
 
-	// TODO Call Gasless serivice
+	// Call Gasless serivice
 	typedData := apitypes.TypedData{
 		Types: apitypes.Types{
 			"EIP712Domain": {
@@ -234,25 +265,39 @@ func NodeEnterByGaslessService(ctx context.Context, c *Chain, replacedNode commo
 
 	v, r, s, err := tools.SignTypedDataAndSplit(typedData, c.verifierPrivKey)
 	if err != nil {
-		return nil, err
+		return false, err
 	}
-	// TODO Send signature
-	fmt.Println(v, r, s)
-	return nil, err
+	nodeEnterRequest := &gasless.ExplorerSendTxNodeEnterRequest{
+		Signer:       c.verifierAddress.String(),
+		ReplacedNode: replacedNode.String(),
+		ExpiredAt:    expiredAt.Uint64(),
+		V:            uint32(v),
+		R:            hex.EncodeToString(r[:]),
+		S:            hex.EncodeToString(s[:]),
+	}
+	enter, err := c.gaslessClient.ExplorerSendTxNodeEnter(ctx, nodeEnterRequest)
+	if err != nil {
+		return false, err
+	}
+	c.logger.WithContext(ctx).Infof("NodeEnterByGaslessService success %s", enter)
+	if enter.Code != 0 {
+		return false, fmt.Errorf("NodeEnterByGaslessService failed %s", enter.Msg)
+	}
+	return true, err
 
 }
 
 // Node Report Verification Batch by service
-func NodeReportVerificationBatchByGaslessService(ctx context.Context, c *Chain, attestationId [32]byte, result uint8, index uint32) {
+func NodeReportVerificationBatchByGaslessService(ctx context.Context, c *Chain, attestationId [32]byte, result uint8, index uint32) (bool, error) {
 	_, found := c.cache.Get(common2.NODE_REPORT_VERIFICATION_BATCH_BY_GASLESS_SERVICE)
 	if found {
 		c.logger.WithContext(ctx).Errorf("NodeReportVerificationBatchByGaslessService is in progress")
-		return
+		return false, fmt.Errorf("NodeReportVerificationBatchByGaslessService is in progress")
 
 	}
 	c.logger.WithContext(ctx).Infof("NodeReportVerificationBatchByGaslessService start........")
-	c.cache.Set(common2.NODE_REPORT_VERIFICATION_BATCH_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME)
-	// TODO Call Gasless serivice
+	c.cache.Set(common2.NODE_REPORT_VERIFICATION_BATCH_BY_GASLESS_SERVICE, true, common2.CACHE_EXPIRED_TIME*time.Second)
+	// Call Gasless serivice
 	typedData := apitypes.TypedData{
 		Types: apitypes.Types{
 			"EIP712Domain": {
@@ -299,9 +344,25 @@ func NodeReportVerificationBatchByGaslessService(ctx context.Context, c *Chain, 
 
 	v, r, s, err := tools.SignTypedDataAndSplit(typedData, c.verifierPrivKey)
 	if err != nil {
-		return
+		return false, err
 	}
 	// Send signature
-	fmt.Println(v, r, s)
+
+	reportVerificationRes, err := c.gaslessClient.ExplorerSendTxNodeReportVerification(ctx, &gasless.ExplorerSendTxNodeReportVerificationRequest{
+		Signer:        c.verifierAddress.String(),
+		AttestationId: string(attestationId[:]),
+		Result:        uint32(result),
+		Index:         index,
+		V:             uint32(v),
+		R:             hex.EncodeToString(r[:]),
+		S:             hex.EncodeToString(s[:]),
+	})
+	if err != nil {
+		return false, err
+	}
+	if reportVerificationRes.Code != 0 {
+		return false, fmt.Errorf("NodeReportVerificationBatchByGaslessService failed %s", reportVerificationRes.Msg)
+	}
+	return true, nil
 
 }
